--- a/angular-client/src/app/components/modals/confirm-modal/confirm-modal.component.html
+++ b/angular-client/src/app/components/modals/confirm-modal/confirm-modal.component.html
@@ -1,6 +1,6 @@
-<h1 mat-dialog-title>Confirmation</h1>
+<h1 mat-dialog-title>{{"ConfirmModal.Confirmation"|translate}}</h1>
 <div mat-dialog-content>{{data.message}}</div>
 <div mat-dialog-actions>
-  <button mat-button (click)="ok()" color="primary">OK</button>
-  <button mat-button (click)="cancel()">Cancel</button>
+  <button mat-button (click)="ok()" color="primary">{{"ConfirmModal.Ok"|translate}}</button>
+  <button mat-button (click)="cancel()">{{"ConfirmModal.Cancel"|translate}}</button>
 </div>
