--- a/angular-client/src/app/components/modals/alert-modal/alert-modal.component.html
+++ b/angular-client/src/app/components/modals/alert-modal/alert-modal.component.html
@@ -1,4 +1,4 @@
 <h1 mat-dialog-title>{{data.message}}</h1>
 <div mat-dialog-actions>
-  <button mat-button (click)="ok()" color="primary">OK</button>
+  <button mat-button (click)="ok()" color="primary">{{"AlertModal.Ok"|translate}}</button>
 </div>
