--- a/angular-client/src/app/components/participants/participant-profile/participant-profile.component.html
+++ b/angular-client/src/app/components/participants/participant-profile/participant-profile.component.html
@@ -1,26 +1,26 @@
 <div class="profile-div" *ngIf="participantSelected">
   <mat-card>
     <h2>{{participantSelected.name}}</h2>
-    <p *ngIf="participantSelected.pronouns !== undefined && participantSelected.pronouns !== ''">Pronouns: {{participantSelected.pronouns}}
+    <p *ngIf="participantSelected.pronouns !== undefined && participantSelected.pronouns !== ''">{{'ParticipantProfile.Pronouns'|translate}} {{participantSelected.pronouns}}
     </p>
-    <p *ngIf="participantSelected.email !== undefined && participantSelected.email !== ''">Email: {{participantSelected.email}}
+    <p *ngIf="participantSelected.email !== undefined && participantSelected.email !== ''">{{'ParticipantProfile.Email'|translate}} {{participantSelected.email}}
     </p>
-    <p *ngIf="participantSelected.telephone !== undefined && participantSelected.telephone !== ''">Phone number: {{participantSelected.telephone}}
+    <p *ngIf="participantSelected.telephone !== undefined && participantSelected.telephone !== ''">{{'ParticipantProfile.Phone'|translate}} {{participantSelected.telephone}}
     </p>
-    <p *ngIf="participantSelected.socialmedia !== undefined">Social media: {{participantSelected.socialmedia.service}} {{participantSelected.socialmedia.username}}
+    <p *ngIf="participantSelected.socialmedia !== undefined">{{'ParticipantProfile.SocialMedia'|translate}} {{participantSelected.socialmedia.service}} {{participantSelected.socialmedia.username}}
     </p>
-    <p *ngIf="participantSelected.address !== undefined && participantSelected.address !== ''">Address: {{participantSelected.address}}
+    <p *ngIf="participantSelected.address !== undefined && participantSelected.address !== ''">{{'ParticipantProfile.Address'|translate}} {{participantSelected.address}}
     </p>
-    <p *ngIf="participantSelected.socialworkers">Social workers assigned:
+    <p *ngIf="participantSelected.socialworkers">{{'ParticipantProfile.SocialWorkers'|translate}}
       <span *ngFor="let worker of participantSelected.socialworkers; let isLast=last">
         {{worker.name}}{{isLast ? '': ', '}}
       </span>
     </p>
     <mat-card-actions>
-      <button mat-raised-button (click)="newCase()">New case</button>
-      <button mat-raised-button (click)="addNote()">Add Note</button>
-      <button mat-raised-button (click)="addDocument()">Add document</button>
-      <button *ngIf="this.authService.role == 'admin'" mat-raised-button (click)="editWorkers()">Edit Social Workers</button>
+      <button mat-raised-button (click)="newCase()">{{'ParticipantProfile.New'|translate}}</button>
+      <button mat-raised-button (click)="addNote()">{{'ParticipantProfile.AddNote'|translate}}</button>
+      <button mat-raised-button (click)="addDocument()">{{'ParticipantProfile.AddDocument'|translate}}</button>
+      <button *ngIf="this.authService.role == 'admin'" mat-raised-button (click)="editWorkers()">{{'ParticipantProfile.EditSocialWorkers'|translate}}</button>
     </mat-card-actions>
   </mat-card>
 
