--- a/angular-client/src/app/components/participants/view-participants/view-participants.component.html
+++ b/angular-client/src/app/components/participants/view-participants/view-participants.component.html
@@ -1,14 +1,14 @@
 <div class="tab-content">
   <div class="sortNSearchToolbar">
     <mat-form-field>
-      <mat-select placeholder="Sort by" [(value)]="sortProperty">
-        <mat-option value="name">Name</mat-option>
-        <mat-option value="updatedAt">Updated</mat-option>
+      <mat-select placeholder="{{'ViewParticipants.Sort'|translate}}" [(value)]="sortProperty">
+        <mat-option value="name">{{'ViewParticipants.Name'|translate}}</mat-option>
+        <mat-option value="updatedAt">{{'ViewParticipants.Updated'|translate}}</mat-option>
       </mat-select>
     </mat-form-field>
     <button mat-raised-button (click)="reverse=!reverse" class="reverseBtn">{{reverse? 'Descending': 'Ascending'}}</button>
     <mat-form-field class="searchBox">
-      <input matInput placeholder="Search" [(ngModel)]="query">
+      <input matInput placeholder="{{'ViewParticipants.Search'|translate}}" [(ngModel)]="query">
     </mat-form-field>
   </div>
 
@@ -21,32 +21,32 @@
             <div class="naming">
               {{participant.name}}
             </div>
-            <div class="username">Username: {{participant.username}}</div>
+            <div class="username">{{'ViewParticipants.Username'|translate}} {{participant.username}}</div>
           </div>
         </mat-card-header>
         <mat-card-content>
           <div *ngIf="participant.pronouns !== undefined && participant.pronouns !== ''">
-            <b> Pronouns: </b> {{participant.pronouns}}
+            <b> {{'ViewParticipants.pronouns'|translate}} </b> {{participant.pronouns}}
             <br>
           </div>
           <div *ngIf="participant.email !== ''">
-            <b> Email: </b> {{participant.email}}
+            <b> {{'ViewParticipants.Email'|translate}} </b> {{participant.email}}
             <br>
           </div>
           <div *ngIf="participant.telephone !== '' ">
-            <b> Phone number: </b> {{participant.telephone}}
+            <b> {{'ViewParticipants.Phone'|translate}} </b> {{participant.telephone}}
             <br>
           </div>
           <div *ngIf="participant.socialmedia !== undefined">
-            <b> Social media: </b> {{participant.socialmedia.service}} {{participant.socialmedia.username}}
+            <b> {{'ViewParticipants.SocialMedia'|translate}} </b> {{participant.socialmedia.service}} {{participant.socialmedia.username}}
             <br>
           </div>
           <div *ngIf="participant.address !== '' ">
-            <b> Address: </b> {{participant.address}}
+            <b> {{'ViewParticipants.Address'|translate}} </b> {{participant.address}}
             <br>
           </div>
           <div *ngIf="participant.socialworkers">
-            <b> Social workers assigned: </b>
+            <b> {{'ViewParticipants.SocialWorkers'|translate}} </b>
             <span *ngFor="let worker of participant.socialworkers; let isLast=last">
               {{worker.name}}{{isLast ? '': ', '}}
             </span>
@@ -54,8 +54,8 @@
           </div>
         </mat-card-content>
 
-        <button mat-raised-button color="primary" (click)="view(participant._id)">View</button>
-        <button mat-raised-button (click)="edit(participant._id, participant)">Edit</button>
+        <button mat-raised-button color="primary" (click)="view(participant._id)">{{'ViewParticipants.View'|translate}}</button>
+        <button mat-raised-button (click)="edit(participant._id, participant)">{{'ViewParticipants.Edit'|translate}}</button>
 
       </div>
 
