Done adding variables to html. #41

--- a/angular-client/src/app/components/reports/reports.component.html
+++ b/angular-client/src/app/components/reports/reports.component.html
@@ -1,4 +1,4 @@
 <mat-card>
-    <mat-card-title>Reports</mat-card-title>
-    <p>Nothing to show</p>
+    <mat-card-title>{{'Reports.Reports'|translate}}</mat-card-title>
+    <p>{{'Reports.Nothing'|translate}}</p>
 </mat-card>
