--- a/angular-client/src/app/components/resources/edit-resource/edit-resource.component.html
+++ b/angular-client/src/app/components/resources/edit-resource/edit-resource.component.html
@@ -2,56 +2,56 @@
   <div class="form-container">
     <form class="form" [formGroup]="resourceForm">
       <mat-form-field>
-        <input matInput required placeholder="Name" name="name" formControlName="name">
+        <input matInput required placeholder="{{'EditResource.Name'|translate}}" name="name" formControlName="name">
       </mat-form-field>
 
       <mat-form-field>
-        <input matInput placeholder="Term" name="term" formControlName="term">
+        <input matInput placeholder="{{'EditResource.Term'|translate}}" name="term" formControlName="term">
       </mat-form-field>
 
       <mat-form-field>
-        <input matInput placeholder="Email" name="email" formControlName="email">
+        <input matInput placeholder="{{'EditResource.Email'|translate}}" name="email" formControlName="email">
       </mat-form-field>
 
       <mat-form-field>
         <span matPrefix>+1 &nbsp;</span>
-        <input matInput placeholder="Telephone" name="telephone" formControlName="phone">
+        <input matInput placeholder="{{'EditResource.Telephone'|translate}}" name="telephone" formControlName="phone">
       </mat-form-field>
 
       <mat-form-field>
-        <input matInput placeholder="Location" name="location" formControlName="location">
+        <input matInput placeholder="{{'EditResource.Location'|translate}}" name="location" formControlName="location">
       </mat-form-field>
 
       <div [ngSwitch]="resource.kind">
 
         <ng-container *ngSwitchCase="'Housing'">
           <mat-form-field>
-            <input matInput placeholder="Notes" name="notes" formControlName="notes">
+            <input matInput placeholder="{{'EditResource.Notes'|translate}}" name="notes" formControlName="notes">
           </mat-form-field>
           <mat-form-field>
-            <input matInput placeholder="Gender" name="gender" formControlName="gender">
+            <input matInput placeholder="{{'EditResource.Gender'|translate}}" name="gender" formControlName="gender">
           </mat-form-field>
           <mat-form-field>
-            <input matInput placeholder="Constraints" name="constraints" formControlName="constraints">
+            <input matInput placeholder="{{'EditResource.Constraints'|translate}}" name="constraints" formControlName="constraints">
           </mat-form-field>
         </ng-container>
 
         <ng-container *ngSwitchCase="'Medical'">
           <mat-form-field>
-            <input matInput placeholder="Cost" name="without_cost" formControlName="without_cost">
+            <input matInput placeholder="{{'EditResource.Cost'|translate}}" name="without_cost" formControlName="without_cost">
           </mat-form-field>
           <mat-form-field>
-            <input matInput placeholder="Waitlist Time" name="waitlist_time" formControlName="waitlist_time">
+            <input matInput placeholder="{{'EditResource.Waitlist'|translate}}" name="waitlist_time" formControlName="waitlist_time">
           </mat-form-field>
           <mat-form-field>
-            <input matInput placeholder="Schedule" name="schedule_availability" formControlName="schedule_availability">
+            <input matInput placeholder="{{'EditResource.Schedule'|translate}}" name="schedule_availability" formControlName="schedule_availability">
           </mat-form-field>
         </ng-container>
       </div>
 
 
-      <button mat-raised-button color="primary" (click)="update()" [disabled]="resourceForm.invalid">Update</button>
-      <button mat-raised-button (click)="cancelEdit()">Cancel</button>
+      <button mat-raised-button color="primary" (click)="update()" [disabled]="resourceForm.invalid">{{'EditResource.Update'|translate}}</button>
+      <button mat-raised-button (click)="cancelEdit()">{{'EditResource.Cancel'|translate}}</button>
 
     </form>
   </div>
