--- a/angular-client/src/app/components/resources/view-resources/view-resources.component.html
+++ b/angular-client/src/app/components/resources/view-resources/view-resources.component.html
@@ -1,9 +1,9 @@
 <div class="tab-content">
   <div class="sortNSearchToolbar">
     <mat-form-field>
-      <mat-select placeholder="Sort by" [(value)]="sortProperty">
-        <mat-option value="name">Name</mat-option>
-        <mat-option value="updatedAt">Updated</mat-option>
+      <mat-select placeholder="{{'ViewResource.Sort'|translate}}" [(value)]="sortProperty">
+        <mat-option value="name">{{'ViewResource.Name'|translate}}</mat-option>
+        <mat-option value="updatedAt">{{'ViewResource.Updated'|translate}}</mat-option>
       </mat-select>
     </mat-form-field>
     <button mat-raised-button (click)="reverse=!reverse" class="reverseBtn">{{reverse? 'Descending': 'Ascending'}}</button>
@@ -17,22 +17,22 @@
       <mat-card-content>
         <div class="content">
           <div class="naming">{{resource.name}}</div>
-          <p *ngIf="resource.location && resource.location !== ''">Location: {{resource.location}}</p>
-          <p *ngIf="resource.phone && resource.phone !== ''">Phone: {{resource.phone}}</p>
-          <p *ngIf="resource.email && resource.email !== ''">Email: {{resource.email}}</p>
+          <p *ngIf="resource.location && resource.location !== ''">{{'ViewResource.Location'|translate}} {{resource.location}}</p>
+          <p *ngIf="resource.phone && resource.phone !== ''">{{'ViewResource.Telephone'|translate}} {{resource.phone}}</p>
+          <p *ngIf="resource.email && resource.email !== ''">{{'ViewResource.Email'|translate}} {{resource.email}}</p>
           <div [ngSwitch]="resource.kind">
             <ng-container *ngSwitchCase="'Housing'">
-              <p *ngIf="resource.term  && resource.term !== ''">Term: {{resource.term}}</p>
-              <p *ngIf="resource.gender && resource.gender !== ''">Gender: {{resource.gender}}</p>
-              <p *ngIf="resource.constraints && resource.constraints[0] !== ''">Constraints: {{resource.constraints}}</p>
+              <p *ngIf="resource.term  && resource.term !== ''">{{'ViewResource.Term'|translate}} {{resource.term}}</p>
+              <p *ngIf="resource.gender && resource.gender !== ''">{{'ViewResource.Gender'|translate}} {{resource.gender}}</p>
+              <p *ngIf="resource.constraints && resource.constraints[0] !== ''">{{'ViewResource.Constraints'|translate}} {{resource.constraints}}</p>
             </ng-container>
             <ng-container *ngSwitchCase="'Medical'">
-              <p *ngIf="resource.without_cost  && resource.without_cost !== ''">Free: {{resource.without_cost}}</p>
-              <p *ngIf="resource.waitlist_time && resource.waitlist_time !== ''">Approximate Waitlist: {{resource.waitlist_time}}</p>
-              <p *ngIf="resource.schedule_availability && resource.schedule_availability !== ''">Schedule: {{resource.schedule_availability}}</p>
+              <p *ngIf="resource.without_cost  && resource.without_cost !== ''">{{'ViewResource.Free'|translate}} {{resource.without_cost}}</p>
+              <p *ngIf="resource.waitlist_time && resource.waitlist_time !== ''">{{'ViewResource.Approx'|translate}} {{resource.waitlist_time}}</p>
+              <p *ngIf="resource.schedule_availability && resource.schedule_availability !== ''">{{'ViewResource.Schedule'|translate}} {{resource.schedule_availability}}</p>
             </ng-container>
           </div>
-          <p *ngIf="resource.notes && resource.notes !== ''"> Notes: {{resource.notes}}</p>
+          <p *ngIf="resource.notes && resource.notes !== ''"> {{'ViewResource.Notes'|translate}} {{resource.notes}}</p>
         </div>
         <div class="actions">
             <button mat-icon-button (click)="edit(resource._id, resource)">
