--- a/angular-client/src/app/components/trashbin/trashbin.component.html
+++ b/angular-client/src/app/components/trashbin/trashbin.component.html
@@ -1,6 +1,6 @@
 <mat-card>
-        <mat-card-title>Trash Bin</mat-card-title>
-        <p *ngIf="!items || items.length < 1">Nothing in the trash bin</p>
+        <mat-card-title>{{'TrashBin.TrashBin'|translate}}</mat-card-title>
+        <p *ngIf="!items || items.length < 1">{{'TrashBin.Nothing'|translate}}</p>
         <div class="container">
           <div class="items" *ngFor="let item of (items | orderBy: 'updatedAt')" [ngSwitch]="item.model">
             <div *ngSwitchCase="'Participant'">
