--- a/angular-client/src/app/components/users/register-user/register-user.component.html
+++ b/angular-client/src/app/components/users/register-user/register-user.component.html
@@ -1,56 +1,56 @@
 <div fxLayout="row wrap" fxLayoutAlign="space-around center" fxFlex="100">
   <mat-card fxFlex="80" class="register-card">
     <mat-card-title>
-      Register a User
+      {{'RegisterUser.Regiser'|translate}}
     </mat-card-title>
     <form id="registrationForm" name="registrationForm" (ngSubmit)="signUp()" *ngIf="!loading" #userForm="ngForm">
       <mat-card-content>
 
         <div class="form-group">
           <mat-form-field fxFlex="100">
-            <input name="rName" matInput required placeholder="Name" class="form-control" [(ngModel)]="user.name">
+            <input name="rName" matInput required placeholder="{{'RegisterUser.Name'|translate}}" class="form-control" [(ngModel)]="user.name">
           </mat-form-field>
         </div>
 
         <div class="form-group">
           <mat-form-field fxFlex="100">
-            <input name="rPronouns" matInput placeholder="Pronouns" class="form-control" [(ngModel)]="user.pronouns">
+            <input name="rPronouns" matInput placeholder="{{'RegisterUser.Pronouns'|translate}}" class="form-control" [(ngModel)]="user.pronouns">
           </mat-form-field>
         </div>
 
         <div class="form-group">
           <mat-form-field fxFlex="100">
-            <input name="rEmail" matInput type="email" placeholder="Email" class="form-control" id="rEmail" [(ngModel)]="user.email"
+            <input name="rEmail" matInput type="email" placeholder="{{'RegisterUser.Email'|translate}}" class="form-control" id="rEmail" [(ngModel)]="user.email"
               #rEmail="ngModel" required>
           </mat-form-field>
         </div>
 
         <div class="form-group">
           <mat-form-field fxFlex="100">
-            <input matInput name="rPassword" type="password" placeholder="Password" class="form-control" id="rPassword" [(ngModel)]="user.password"
+            <input matInput name="rPassword" type="password" placeholder="{{'RegisterUser.Password'|translate}}" class="form-control" id="rPassword" [(ngModel)]="user.password"
               #rPassword="ngModel" required pattern="^\w{4,12}">
           </mat-form-field>
         </div>
 
         <div class="form-group" fxLayout="row wrap">
           <mat-form-field fxFlex="100">
-            <input matInput name="rConfirmPassword" type="password" placeholder="Confirm Password" class="form-control" id="rConfirmPassword"
+            <input matInput name="rConfirmPassword" type="password" placeholder="{{'RegisterUser.Confirm'|translate}}" class="form-control" id="rConfirmPassword"
               [(ngModel)]="user.confirmPassword" #rConfirmPassword="ngModel" required pattern="^\w{4,12}" />
           </mat-form-field>
-          <div fxFlex="100" style="color:red;" *ngIf="user.password !== user.confirmPassword && user.confirmPassword">Passwords do not match</div>
+          <div fxFlex="100" style="color:red;" *ngIf="user.password !== user.confirmPassword && user.confirmPassword">{{'RegisterUser.Fail'|translate}}</div>
         </div>
 
         <div class="form-group">
           <mat-form-field fxFlex="100">
             <mat-select [(value)]="user.role">
-              <mat-option value="admin">Administrator</mat-option>
-              <mat-option value="user">Regular User</mat-option>
+              <mat-option value="admin">{{'RegisterUser.Admin'|translate}}</mat-option>
+              <mat-option value="user">{{'RegisterUser.Regular'|translate}}</mat-option>
             </mat-select>
           </mat-form-field>
         </div>
 
         <button mat-raised-button [disabled]="(!user.name || user.password !== user.confirmPassword) || !user.email || !user.password || (user.password.lenght < 4 ||!userForm.valid)"
-          color="primary" type="submit">Submit</button>
+          color="primary" type="submit">{{'RegisterUser.Submit'|translate}}</button>
       </mat-card-content>
     </form>
 
