Replaced text with variables in TS files. #41

--- a/angular-client/src/app/app.component.html
+++ b/angular-client/src/app/app.component.html
@@ -16,7 +16,7 @@
   <span class="example-fill-remaining-space"></span>
   <span>
   <mat-select #langSelect (change)="translate.use(langSelect.value)">
-          <mat-option *ngFor="let lang of translate.getLangs()" [value]="lang" selected="lang === translate.currentLang">{{ lang }}</mat-option>
+          <mat-option *ngFor="let lang of translate.getLangs()" placeholder="Choose Language" [value]="lang" selected="lang === translate.currentLang">{{ lang }}</mat-option>
         </mat-select>
   </span>
   <span *ngIf="this.authenticationService.loggedIn">
