Thanks to the magic of Liuai and Anna, I have a number in my reports #90

--- a/angular-client/src/app/components/reports/reports.component.html
+++ b/angular-client/src/app/components/reports/reports.component.html
@@ -2,7 +2,7 @@
     <mat-card-title>Reports</mat-card-title>
     <mat-card-content>
         <h2>Calls by urgency</h2>
-        <p>Urgent YES: {{this.urgency.get("urgentYES")}}</p>
+        <p>Urgent YES: {{this.urgency.get("urgencyYES")}}</p>
         <p>Urgent  NO: </p>
         <p>Total calls: </p>
     </mat-card-content>
