--- a/angular-client/src/app/components/reports/reports.component.html
+++ b/angular-client/src/app/components/reports/reports.component.html
@@ -2,8 +2,7 @@
     <mat-card-title>Reports</mat-card-title>
     <mat-card-content>
         <h2>Calls by urgency</h2>
-        <p>Urgent YES: {{this.urgency.get("urgencyYES")}}</p>
-        <p>Urgent  NO: </p>
-        <p>Total calls: </p>
+        <p>YES: {{this.urgency.get("urgencyYES")}}</p>
+        <p>NO : {{this.urgency.get("urgencyNO")}} </p>
     </mat-card-content>
 </mat-card>
